--- a/playshop/public/index.html
+++ b/playshop/public/index.html
@@ -13,6 +13,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" type="text/css" href="https://cloud.typography.com/6915872/7727212/css/fonts.css" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +25,8 @@
     -->
     <!-- <link rel="stylesheet" type="text/css" href="//cloud.typography.com/6915872/7727212/css/fonts.css" /> -->
 
-    <title>React App</title>
+    <title>Workshops — IDEO Play Lab 
+    </title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
